Wed Aug 20 14:07:05 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* pager.c (service_paging_requests): New args for
	ports_manage_port_operations_multithread. 
	* storeio.c (main): Likewise.

1997-07-23  Miles Bader  <miles@gnu.ai.mit.edu>

	* io.c (trivfs_S_io_readable, trivfs_S_io_read, trivfs_S_io_map):
	Return EBADF instead of EINVAL.
	(trivfs_S_io_select): Don't bother returning EBADF.

1997-07-22  Miles Bader  <miles@gnu.ai.mit.edu>

	* io.c (trivfs_S_io_read): Return EINVAL instead of EBADF.
	(trivfs_S_io_map): Return EINVAL if CRED cannot be read or written.

1997-07-21  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): Add iohelp.

1997-07-17  Miles Bader  <miles@gnu.ai.mit.edu>

	* io.c (trivfs_S_io_map): Pass PROT argument to dev_get_memory_object.
	* pager.c (dev_get_memory_object): Add PROT arg.  Use store_map.
	* dev.h (dev_get_memory_object): Add PROT arg.

1997-07-16  Miles Bader  <miles@gnu.ai.mit.edu>

	* pager.c (pager_read_page): Initialize READ to 0.

	* pager.c (dev_get_memory_object): Implement correctly.
	(dev_stop_paging): Work entirely by flushing user pagers; don't kill pager.
	(pager_clear_user_data): Zero our pointer to the pager.

	* io.c (trivfs_S_io_map): Make sure there are enough references to
	MEMOBJ for both read & write ports.

Wed Feb 19 21:42:45 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* storeio.c (fsys_port_class, root_port_class, port_bucket,
	trivfs_protid_portclasses, trivfs_protid_nportclasses,
	trivfs_cntl_portclasses, trivfs_cntl_nportclasses): Variables removed.
	(main): Don't set or use port class/bucket variables, let
	trivfs_startup do it.
	Add FSYS variable.
	(doc): Make an initialized array.
	(parse_opt): New function (was nested in main).
	(argp, argp_kids): New variables (were nested in main).
	(trivfs_goaway): Get ROOT_PORT_CLASS from FSYS.

Fri Nov 15 17:54:10 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* storeio.c (trivfs_check_open_hook): New arg syntax.